docs(notebooks): review notebooks for numbering, grammar, and consistency (#320)

--- a/notebooks/save_and_load_model.ipynb
+++ b/notebooks/save_and_load_model.ipynb
@@ -10,9 +10,15 @@
     "In this tutorial, we illustrate the process of saving and loading a model using CapyMOA. \n",
     "\n",
     "* We use the SEA synthetic generator as the data source, and the AdaptiveRandomForestClassifier as the learner.\n",
-    "* The trained model is saved to a file, specifically 'capymoa_model.pkl'.\n",
+    "* The trained model is saved to a file, specifically `capymoa_ARF_model.pkl`.\n",
     "* Subsequently, we reload the model from the file and resume training and evaluating its performance on the SEA data.\n",
-    "* As a final step, we delete the model file."
+    "* As a final step, we delete the model file.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "*More information about CapyMOA can be found at* https://www.capymoa.org.\n",
+    "\n",
+    "**last update on 01/12/2025**"
    ]
   },
   {
@@ -22,13 +28,13 @@
    "source": [
     "## 1. Training and saving the model\n",
     "\n",
-    "* We train the model on 5k instances from SEA using the `evaluate_prequential` function\n",
-    "* We proceed to save the model with `save_model(learner, \"capymoa_ARF_model.pkl\")`"
+    "* We train the model on 5k instances from SEA using the `evaluate_prequential` function.\n",
+    "* We proceed to save the model with `save_model(learner, \"capymoa_ARF_model.pkl\")`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "id": "b7ca1c5addd95ba3",
    "metadata": {
     "ExecuteTime": {
@@ -76,13 +82,13 @@
     "## 2. Loading and resuming training\n",
     "\n",
     "* We use `os.path.getsize()` to inspect the size (KB) of the saved file.\n",
-    "* We don't restart the synthetic stream, we just continue processing it through another call to `prequential_evaluation`\n",
-    "* Finally, we observe the accuracy "
+    "* We don't restart the synthetic stream, we just continue processing it through another call to `prequential_evaluation`.\n",
+    "* Finally, we observe the accuracy."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "id": "2f7dd29e2ed65686",
    "metadata": {
     "ExecuteTime": {
@@ -101,7 +107,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The saved model size: 616.69 KB\n",
+      "The saved model size: 616.77 KB\n",
       "Updated accuracy: 89.30\n"
      ]
     }
@@ -132,12 +138,12 @@
    "source": [
     "## 3. Cleanup \n",
     "\n",
-    "* As a last step, we delete the model"
+    "* As a last step, we delete the model."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "id": "e00a292713d154ee",
    "metadata": {
     "ExecuteTime": {
@@ -167,19 +173,11 @@
     "else:\n",
     "    print(f\"File {model_file} not found.\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "59c7b60f-908e-4640-a6b8-50650d6c9287",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "capymoa",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -193,7 +191,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
