--- a/notebooks/03_pytorch.ipynb
+++ b/notebooks/03_pytorch.ipynb
@@ -478,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "8a6fdd873625b07b",
    "metadata": {
     "ExecuteTime": {
@@ -858,7 +858,7 @@
    ],
    "source": [
     "from capymoa.classifier import OnlineBagging\n",
-    "from capymoa.stream import TorchClassifyStream\n",
+    "from capymoa.stream import TorchStream\n",
     "from capymoa.evaluation import prequential_evaluation\n",
     "from capymoa.evaluation.visualization import plot_windowed_results\n",
     "\n",
@@ -868,7 +868,9 @@
     "pytorch_dataset = datasets.FashionMNIST(\n",
     "    root=\"data\", train=True, download=True, transform=ToTensor()\n",
     ")\n",
-    "pytorch_stream = TorchClassifyStream(dataset=pytorch_dataset, num_classes=10)\n",
+    "pytorch_stream = TorchStream.from_classification(\n",
+    "    dataset=pytorch_dataset, num_classes=10\n",
+    ")\n",
     "\n",
     "# Creating a learner\n",
     "ob_learner = OnlineBagging(schema=pytorch_stream.get_schema(), ensemble_size=5)\n",
